# chessf

./: .gitignore  README.md  cli.py  core.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.txt
src/chessf/: __init__.py  analysis.py  cli.py  core.py
tests/: test_core.py
